# VitalRecordAnalyser

./: .gitignore  .gitmodules  CMakeLists.txt  Model.md  Readme.md  requirements.txt
cmake/modules/: FindTensorFlow.cmake
include/: ImageUtil.hpp
include/DatasetBuilder/: DatasetBuilder.hpp  DatasetImage.hpp  ImageSegmenterDialog.hpp  ImageSet.hpp  MainWindow.hpp
include/Model/Dataset/: ImageSet.hpp
include/Model/TextDetection/: MatCaster.hpp  TextCorrection.hpp  TextDetection.hpp
include/Model/TextRecognition/: TextRecognition.hpp
include/Model/TextSegmentation/: Binarization.hpp  EASTDetector.hpp  LocallySoftAdaptativeBinarization.hpp  ParagraphSegmentation.hpp  Preprocessing.hpp  Scanner.hpp  Segmentation.hpp  TextSegmentation.hpp  WordSegmentation.hpp
include/TextDetection/: MatCaster.hpp  TextDetection.hpp
include/TextSegmentation/: Binarization.hpp  LineSegmentation.hpp  TextSegmentation.hpp  main.cpp
include/Ui/: CivilRegistryAnalyzer.hpp  DatasetBuilder.hpp  ImageSegmenterDialog.hpp  PyOutputRedirector.hpp
py/: checkpoint_recognizer.hdf5  checkpoint_weights.hdf5  east_detector.py  ml_utils.py  nlp.py  text_correction.py  text_detection.py  text_recognizer.py
py/EAST/: convert_graph.py  eval.py  eval_frozen_graph.py  icdar.py  model.py  multigpu_train.py
py/EAST/lanms/: adaptor.exp  adaptor.pyd
py/EAST/nets/: resnet_utils.py  resnet_v1.py
py/assets/: test.py  training.py  transform.py
py/data/: preproc.py
py/network/: layers.py  model.py
src/: TfMain.cpp  main.cpp
src/CivilRegistryAnalyzer/: main.cpp
src/DatasetBuilder/: DatasetBuilder.cpp  DatasetImage.cpp  ImageSegmenterDialog.cpp  ImageSet.cpp  MainWindow.cpp  MainWindow.ui  TextSegmentation.cpp  main.cpp
src/Model/Dataset/: DatasetImage.cpp  ImageSet.cpp
src/Model/TextDetection/: TextCorrection.cpp  TextDetection.cpp
src/Model/TextRecognition/: TextRecognition.cpp
src/Model/TextSegmentation/: Binarization.cpp  EASTDetector.cpp  LineSegmentation.cpp  LocallySoftAdaptativeBinarization.cpp  Preprocessing.cpp  Scanner.cpp  Segmentation.cpp  TextSegmentation.cpp  WordSegmentation.cpp
src/TextDetection/: TextDetection.cpp
src/TextSegmentation/: Binarization.cpp  LineSegmentation.cpp  Scanner.cpp  TextSegmentation.cpp  WordSegmentation.cpp
src/Ui/: CivilRegistryAnalyzer.cpp  CivilRegistryAnalyzer.ui  DatasetBuilder.cpp  DatasetBuilder.ui  ImageSegmenterDialog.cpp  ImageSegmenterDialog.ui  PyOutputRedirector.cpp
